# roic-plus-fcf

./: .gitignore  README.md  cedears.txt  main.py  pyproject.toml  tickers.txt
